--- a/PersonalFinanceTracker.csproj
+++ b/PersonalFinanceTracker.csproj
@@ -7,4 +7,9 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="System.Data.SqlClient" Version="4.9.0" />
+    <PackageReference Include="Ulid" Version="1.3.4" />
+  </ItemGroup>
+
 </Project>
